--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,55 @@
 {
-    "home.hero.title.first.line": "CAPTURE",
-    "home.hero.title.second.line": "BRILLIANCE"
-  }
-  
+  "syp.commons.portfolio": "Portfolio",
+  "syp.commons.editorials": "Editorials",
+  "syp.commons.about": "About SYP!",
+  "syp.commons.contact": "Contact",
+  "navbar.home": "Home",
+  "navbar.portfolio.seeAll": "See all",
+  "navbar.portfolio.nature": "Nature",
+  "navbar.portfolio.photoshoots": "Photoshoots",
+  "navbar.portfolio.lifestyle": "Lifestyle",
+  "navbar.portfolio.sports": "Sports",
+  "navbar.portfolio.music": "Music",
+  "footer.claim.mobile": " LET’s HAVE A CHAT",
+  "footer.claim.desktop": "LIFE IS TOO SHORT FOR BORING WEBSITES",
+  "footer.small": "Site by .SYP!",
+  "footer.carousel": "GET IN TOUCH",
+  "home.hero.title.firstLine": "CAPTURE",
+  "home.hero.title.secondLine": "BRILLIANCE",
+  "home.hero.callToAction": "See my work",
+  "home.section.textAnimation": "SYP! is where creativity and technology collide. With a focus on design, programming, and photography, I turn ideas into visually striking and functionally seamless experiences that leave a mark. It’s not just about what’s created—it’s about how it connects, inspires, and stands out.",
+  "home.swiper.portfolio.nature.title": "Nature",
+  "home.swiper.portfolio.nature.description": "Earth's Palette",
+  "home.swiper.portfolio.photoshoots.title": "Photoshoots",
+  "home.swiper.portfolio.photoshoots.description": "Studio Visions",
+  "home.swiper.portfolio.sports.title": "Sports",
+  "home.swiper.portfolio.sports.description": "Peak Performance",
+  "home.swiper.portfolio.music.title": "Music",
+  "home.swiper.portfolio.music.description": "Soundscapes",
+  "home.swiper.portfolio.lifestyle.title": "Lifestyle",
+  "home.swiper.portfolio.lifestyle.description": "Everyday Stories",
+  "home.swiper.editorials.greece.title": "Greece",
+  "home.swiper.editorials.greece.description": "Salt & Stone",
+  "home.swiper.editorials.tanzania.title": "Tanzania",
+  "home.swiper.editorials.tanzania.description": "Raw Earth",
+  "home.swiper.editorials.dolomites.title": "Dolomites",
+  "home.swiper.editorials.dolomites.description": "Jagged Dreams",
+  "portfolio.section.textAnimation": "Photography transforms moments into lasting memories, showcasing beauty and uniqueness. My portfolio shares diverse perspectives and stories, from serene landscapes to vibrant street scenes.",
+  "portfolio.cards.nature.title": "Nature",
+  "portfolio.cards.photoshoots.title": "Photoshoots",
+  "portfolio.cards.sports.title": "Sports",
+  "portfolio.cards.music.title": "Music",
+  "portfolio.cards.lifestyle.title": "Lifestyle",
+  "portfolio.detail.photoshoots.title": "Photoshoots",
+  "portfolio.detail.photoshoots.subtitle": "THE WORLD LOOKS BETTER WHEN YOU’RE LOOKING FOR THE SHOT",
+  "portfolio.detail.photoshoots.textAnimation.mobile": "Fashion photography captures identity and expression, showcasing creativity, innovation, and artistry, vividly highlighting the transformative power of clothing to reflect individuality.",
+  "portfolio.detail.photoshoots.textAnimation.desktop": "A vibrant exploration of identity and expression unfolds in fashion photography, where the lens captures the fleeting essence of style. Each photograph tells a story of creativity and innovation, showcasing the transformative power of clothing as it reflects individuality. Through color, form, and context, these images celebrate the artistry of fashion and its ability to convey emotion and culture.",
+  "portfolio.detail.music.title": "Music",
+  "portfolio.detail.music.subtitle": "STOP AND SHOOT—BECAUSE THE BEST MOMENTS WON’T WAIT",
+  "portfolio.detail.music.textAnimation.mobile": "Music photography transforms sound into visuals, capturing rhythmic moments and emotional energy. Each image conveys live performance vibrancy and the bond between artist and audience.",
+  "portfolio.detail.music.textAnimation.desktop": "The essence of sound is distilled into visual form through music photography, where captured moments vibrate with rhythm and emotion. Each image pulsates with the energy of live performances, intertwining the intimate connection between artist and audience. These photographs reveal the electric atmosphere of concerts, celebrating the power of music to unite and inspire.",
+  "portfolio.detail.nature.title": "Nature",
+  "portfolio.detail.nature.subtitle": "NATURE DOESN’T POSE, BUT IT ALWAYS DELIVERS.",
+  "portfolio.detail.nature.textAnimation.mobile": "Nature photography captures the delicate dance of light and shadow, bringing landscapes to life. Each frame reveals sublime beauty, vividly highlighting the intricate details of flora and fauna often overlooked.",
+  "portfolio.detail.nature.textAnimation.desktop": "The intricate dance of light and shadow comes alive in nature photography, where landscapes breathe life into stillness. Each frame becomes a portal to the sublime, showcasing the beauty of flora and fauna often overlooked. These images invite contemplation and appreciation for the delicate balance of ecosystems, reminding us of our connection to the natural world."
+}
