--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,5 +1,37 @@
 {
-    "home.hero.title.first.line": "CAPTURA",
-    "home.hero.title.second.line": "PRUEBA"
-  }
-  
+  "syp.commons.portfolio": "Portafolio",
+  "syp.commons.editorials": "Editoriales",
+  "syp.commons.about": "Sobre SYP!",
+  "syp.commons.contact": "Contacto",
+  "navbar.home": "Inicio",
+  "navbar.portfolio.seeAll": "Ver todo",
+  "navbar.portfolio.nature": "Naturaleza",
+  "navbar.portfolio.photoshoots": "Sesiones",
+  "navbar.portfolio.lifestyle": "Estilo de vida",
+  "navbar.portfolio.sports": "Deportes",
+  "navbar.portfolio.music": "Música",
+  "footer.claim.mobile": "HABLEMOS AHORA",
+  "footer.claim.desktop": "LA VIDA ES CORTA PARA SITIOS ABURRIDOS",
+  "footer.small": "Sitio por .SYP!",
+  "footer.carousel": "CONTÁCTAME",
+  "home.hero.title.firstLine": "CAPTURA",
+  "home.hero.title.secondLine": "BRILLANTEZ",
+  "home.hero.callToAction": "Ver mi trabajo",
+  "home.section.textAnimation": "SYP! es donde creatividad y tecnología chocan. Con enfoque en diseño, programación y fotografía, convierto ideas en experiencias visualmente impactantes y funcionalmente perfectas que dejan huella. No es solo lo que se crea—es cómo conecta, inspira y destaca.",
+  "home.swiper.portfolio.nature.title": "Naturaleza",
+  "home.swiper.portfolio.nature.description": "Paleta de la Tierra",
+  "home.swiper.portfolio.photoshoots.title": "Sesiones",
+  "home.swiper.portfolio.photoshoots.description": "Visiones de estudio",
+  "home.swiper.portfolio.sports.title": "Deportes",
+  "home.swiper.portfolio.sports.description": "Rendimiento máximo",
+  "home.swiper.portfolio.music.title": "Música",
+  "home.swiper.portfolio.music.description": "Paisajes sonoros",
+  "home.swiper.portfolio.lifestyle.title": "Estilo de vida",
+  "home.swiper.portfolio.lifestyle.description": "Historias cotidianas",
+  "home.swiper.editorials.greece.title": "Grecia",
+  "home.swiper.editorials.greece.description": "Sal y piedra",
+  "home.swiper.editorials.tanzania.title": "Tanzania",
+  "home.swiper.editorials.tanzania.description": "Tierra pura",
+  "home.swiper.editorials.dolomites.title": "Dolomitas",
+  "home.swiper.editorials.dolomites.description": "Sueños escarpados"
+}
