add loading to contact form submitting

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,21 +19,21 @@
   "home.hero.callToAction": "See my work",
   "home.section.textAnimation": "SYP! is where creativity and technology collide. With a focus on design, programming, and photography, I turn ideas into visually striking and functionally seamless experiences that leave a mark. It’s not just about what’s created—it’s about how it connects, inspires, and stands out.",
   "home.swiper.portfolio.nature.title": "Nature",
-  "home.swiper.portfolio.nature.description": "Earth's Palette",
+  "home.swiper.portfolio.nature.description": "\"Earth's Palette\"",
   "home.swiper.portfolio.photoshoots.title": "Photoshoots",
-  "home.swiper.portfolio.photoshoots.description": "Studio Visions",
+  "home.swiper.portfolio.photoshoots.description": "\"Studio Visions\"",
   "home.swiper.portfolio.sports.title": "Sports",
-  "home.swiper.portfolio.sports.description": "Peak Performance",
+  "home.swiper.portfolio.sports.description": "\"Peak Performance\"",
   "home.swiper.portfolio.music.title": "Music",
-  "home.swiper.portfolio.music.description": "Soundscapes",
+  "home.swiper.portfolio.music.description": "\"Soundscapes\"",
   "home.swiper.portfolio.lifestyle.title": "Lifestyle",
-  "home.swiper.portfolio.lifestyle.description": "Everyday Stories",
+  "home.swiper.portfolio.lifestyle.description": "\"Everyday Stories\"",
   "home.swiper.editorials.greece.title": "Greece",
-  "home.swiper.editorials.greece.description": "Salt & Stone",
+  "home.swiper.editorials.greece.description": "\"Salt & Stone\"",
   "home.swiper.editorials.tanzania.title": "Tanzania",
-  "home.swiper.editorials.tanzania.description": "Raw Earth",
+  "home.swiper.editorials.tanzania.description": "\"Raw Earth\"",
   "home.swiper.editorials.dolomites.title": "Dolomites",
-  "home.swiper.editorials.dolomites.description": "Jagged Dreams",
+  "home.swiper.editorials.dolomites.description": "\"Jagged Dreams\"",
   "portfolio.section.textAnimation": "Photography transforms moments into lasting memories, showcasing beauty and uniqueness. My portfolio shares diverse perspectives and stories, from serene landscapes to vibrant street scenes.",
   "portfolio.cards.nature.title": "Nature",
   "portfolio.cards.photoshoots.title": "Photoshoots",
